[jspit/dla] fix RandAny balance; make it the default

--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -75,11 +75,12 @@
               Where:
               <select id="dla-initWhere" name="initWhere"></select>
             </label></dd>
-            <dd><label for="dla-initAnyBalance" >
-              Void-vs-World Balance:
+            <dd><label for="dla-initAnyBalance">
+              World-vs-Void Balance:
               <input id="dla-initAnyBalance" name="initAnyBalance" type="number" min="0" max="1" step="0.01" />
               <div class="tip">
-                when using "Random Point" strategy above
+                when using "Random Point" strategy above, what's the target
+                proportion for particles spawned within the world
               </div>
             </label></dd>
             <dd>
