[jspit] fix colorboop and dla page document binding

--- a/packages/jspit/src/colorboop.html
+++ b/packages/jspit/src/colorboop.html
@@ -48,6 +48,7 @@
     <script type="module">
       import {init} from './colorboop';
       init({
+        doc:     document,
         head:    document.querySelector('header'),
         foot:    document.querySelector('footer'),
         status:  document.querySelector('footer .status'),
