--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -188,6 +188,7 @@
     <script type="module">
       import {init} from './dla';
       init({
+        doc: document,
         status: document.querySelector('footer .status'),
         menu: document.querySelector('main .menu'),
         grid: document.querySelector('main .grid '),
