[jspit] add domgeon skeleton

--- a/packages/jspit/src/index.html
+++ b/packages/jspit/src/index.html
@@ -38,6 +38,11 @@
               applied to procedural map generation.
             </dd>
 
+            <dt><a href="domgeon.html">DOMgeon</a></dt><dd>
+              A prototype dungeon template with floors, walls, doors,
+              interactions, and excitement!
+            </dd>
+
           </dl>
         </section>
 
