[jspit] drop old ui module
Now that versioning is obsolete, the only thing left was show/hide state
bits, which are clearer when just inlined.

--- a/packages/jspit/src/colorboop.html
+++ b/packages/jspit/src/colorboop.html
@@ -46,7 +46,7 @@
     <script type="module">
       import {init} from './colorboop';
       init({
-        doc:   document,
+        ui:    document.body,
         head:  document.querySelector('header'),
         foot:  document.querySelector('footer'),
         main:  document.querySelector('main'),
