--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -187,7 +187,7 @@
     <script type="module">
       import {init} from './dla';
       init({
-        doc: document,
+        ui: document.body,
         menu: document.querySelector('main .menu'),
         grid: document.querySelector('main .grid '),
         keys: document.body,
