--- a/packages/jspit/src/domgeon.html
+++ b/packages/jspit/src/domgeon.html
@@ -109,7 +109,7 @@
     <script type="module">
       import {init} from './domgeon';
       init({
-        doc: document,
+        ui: document.body,
         keys: document.body,
         grid: document.querySelector('main .grid '),
         inspector: document.querySelector('#inspector'),
