--- a/packages/jspit/src/domgeon.html
+++ b/packages/jspit/src/domgeon.html
@@ -29,11 +29,8 @@
         <fieldset>
           <legend>TODO:</legend>
           <ul>
-            <li>config/scripted construction</li>
-            <li>floors</li>
-            <li>walls</li>
-            <li>doors</li>
-            <li>interactions</li>
+            <li>doors should go places</li>
+            <li>visibility ala <a ref="https://www.albertford.com/shadowcasting">shadow casting</a></li>
             <li>maybe inventory and items</li>
           </ul>
         </fieldset>
@@ -52,53 +49,17 @@
 
       </aside>
 
+      <style>
+        /* tile stacking priorities */
+        .tile.floor { z-index:  0 }
+        .tile.wall  { z-index: 10 }
+        .tile.mover { z-index: 20 }
+        .tile.input { z-index: 50 }
+
+        /* wall should occlude floor */
+        .tile.wall { background-color: var(--darker-grey) }
+      </style>
       <div class="grid">
-
-        <div id="player" class="tile mover solid input" style="--x: 0; --y: 0">@</div>
-
-        <div id="floor-1" class="tile floor" style="--x: -2; --y: -2">·</div>
-        <div id="floor-2" class="tile floor" style="--x: -1; --y: -2">·</div>
-        <div id="floor-3" class="tile floor" style="--x: 0; --y: -2">·</div>
-        <div id="floor-4" class="tile floor" style="--x: 1; --y: -2">·</div>
-        <div id="floor-5" class="tile floor" style="--x: 2; --y: -2">·</div>
-        <div id="floor-6" class="tile floor" style="--x: -2; --y: -1">·</div>
-        <div id="floor-7" class="tile floor" style="--x: -1; --y: -1">·</div>
-        <div id="floor-8" class="tile floor" style="--x: 0; --y: -1">·</div>
-        <div id="floor-9" class="tile floor" style="--x: 1; --y: -1">·</div>
-        <div id="floor-10" class="tile floor" style="--x: 2; --y: -1">·</div>
-        <div id="floor-11" class="tile floor" style="--x: -2; --y: 0">·</div>
-        <div id="floor-12" class="tile floor" style="--x: -1; --y: 0">·</div>
-        <div id="floor-13" class="tile floor" style="--x: 0; --y: 0">·</div>
-        <div id="floor-14" class="tile floor" style="--x: 1; --y: 0">·</div>
-        <div id="floor-15" class="tile floor" style="--x: 2; --y: 0">·</div>
-        <div id="floor-16" class="tile floor" style="--x: -2; --y: 1">·</div>
-        <div id="floor-17" class="tile floor" style="--x: -1; --y: 1">·</div>
-        <div id="floor-18" class="tile floor" style="--x: 0; --y: 1">·</div>
-        <div id="floor-19" class="tile floor" style="--x: 1; --y: 1">·</div>
-        <div id="floor-20" class="tile floor" style="--x: 2; --y: 1">·</div>
-        <div id="floor-21" class="tile floor" style="--x: -2; --y: 2">·</div>
-        <div id="floor-22" class="tile floor" style="--x: -1; --y: 2">·</div>
-        <div id="floor-23" class="tile floor" style="--x: 0; --y: 2">·</div>
-        <div id="floor-24" class="tile floor" style="--x: 1; --y: 2">·</div>
-        <div id="floor-25" class="tile floor" style="--x: 2; --y: 2">·</div>
-
-        <div id="wall-1" class="tile wall solid" style="--x: -2; --y: -2">-</div>
-        <div id="wall-2" class="tile wall solid" style="--x: -1; --y: -2">-</div>
-        <div id="wall-3" class="tile door solid" style="--x: 0; --y: -2">+</div>
-        <div id="wall-4" class="tile wall solid" style="--x: 1; --y: -2">-</div>
-        <div id="wall-5" class="tile wall solid" style="--x: 2; --y: -2">-</div>
-        <div id="wall-6" class="tile wall solid" style="--x: -2; --y: -1">|</div>
-        <div id="wall-10" class="tile wall solid" style="--x: 2; --y: -1">|</div>
-        <div id="wall-11" class="tile wall solid" style="--x: -2; --y: 0">|</div>
-        <div id="wall-15" class="tile wall solid" style="--x: 2; --y: 0">|</div>
-        <div id="wall-16" class="tile wall solid" style="--x: -2; --y: 1">|</div>
-        <div id="wall-20" class="tile wall solid" style="--x: 2; --y: 1">|</div>
-        <div id="wall-21" class="tile wall solid" style="--x: -2; --y: 2">-</div>
-        <div id="wall-22" class="tile wall solid" style="--x: -1; --y: 2">-</div>
-        <div id="wall-23" class="tile door solid" style="--x: 0; --y: 2">+</div>
-        <div id="wall-24" class="tile wall solid" style="--x: 1; --y: 2">-</div>
-        <div id="wall-25" class="tile wall solid" style="--x: 2; --y: 2">-</div>
-
       </div>
 
     </main>
@@ -107,13 +68,36 @@
     </footer>
 
     <script type="module">
-      import {init} from './domgeon';
-      init({
+      import {DOMgeon, DOMgeonInspector} from './domgeon';
+      const dmg = window.world = new DOMgeon({
         ui: document.body,
         keys: document.body,
         grid: document.querySelector('main .grid '),
-        inspector: document.querySelector('#inspector'),
       });
+      new DOMgeonInspector(dmg, document.querySelector('#inspector'));
+
+      // TODO probably a DOMgeonBuilder would be nice
+      const w=13, h=8;
+
+      const pos = {x: Math.floor(w/2), y: Math.floor(h/2)};
+      dmg.grid.createTile({pos, className: ['input', 'mover', 'solid'], text: '@'});
+      dmg.grid.viewPoint = pos;
+
+      for (let x=0; x<w; x++) for (let y=0; y<h; y++)
+        dmg.grid.createTile({pos: {x, y}, className: 'floor', text: '·'});
+      for (let x=0; x<w; x++)
+        if (x === Math.floor(w/2)) {
+          dmg.grid.createTile({pos: {x, y:   0}, className: ['door', 'solid'], text: '+'});
+          dmg.grid.createTile({pos: {x, y: h-1}, className: ['door', 'solid'], text: '+'});
+        } else {
+          dmg.grid.createTile({pos: {x, y:   0}, className: ['wall', 'solid'], text: '-'});
+          dmg.grid.createTile({pos: {x, y: h-1}, className: ['wall', 'solid'], text: '-'});
+        }
+      for (let y=1; y<h-1; y++) {
+        dmg.grid.createTile({pos: {x:   0, y}, className: ['wall', 'solid'], text: '|'});
+        dmg.grid.createTile({pos: {x: w-1, y}, className: ['wall', 'solid'], text: '|'});
+      }
+
     </script>
   </body>
 
