--- a/packages/jspit/src/domgeon.html
+++ b/packages/jspit/src/domgeon.html
@@ -69,10 +69,10 @@
 
     <script type="module">
       import {DOMgeon, DOMgeonInspector} from './domgeon';
-      const dmg = window.world = new DOMgeon({
+      const dmg = window.dmg = new DOMgeon({
         ui: document.body,
         keys: document.body,
-        grid: document.querySelector('main .grid '),
+        grid: document.querySelector('main .grid'),
       });
       new DOMgeonInspector(dmg, document.querySelector('#inspector'));
 
