[jspit/dla] cleanup html; fix minor bug in a link href

--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -151,7 +151,7 @@
 
           Other resources:
           <ul>
-            <li><a href"https://roguelike.club/event2020.html">Roguecel 2020 talk by Herbert Wolverson</a> demonstrated DLA among other techniques</li>
+            <li><a href="https://roguelike.club/event2020.html">Roguecel 2020 talk by Herbert Wolverson</a> demonstrated DLA among other techniques</li>
             <li><a href="//www.roguebasin.com/index.php?title=Diffusion-limited_aggregation">Roguebasin DLA article</a></li>
             <li><a href="//en.wikipedia.org/wiki/Diffusion-limited_aggregation">WikiPedia on the wider topic</a></li>
             <li><a href="//paulbourke.net/fractals/dla/">Paul Boruke, reference from DonKarlssonSan</a></li>
@@ -164,24 +164,23 @@
         </section>
 
       </aside>
-      <div class="grid">
 
+      <div class="grid">
         <fieldset id="inspector">
           <legend>
             <label for="inspector-ids">Tiles @<span id="inspector-at">X,Y</span>:</label>
           </legend>
           <textarea id="inspector-ids" readonly></textarea>
         </fieldset>
-
       </div>
+
     </main>
 
     <footer>
-        <label for="particleID">
-          Particles:
-          <span id="particleID" class="value">0</span>
-        </label>
-
+      <label for="particleID">
+        Particles:
+        <span id="particleID" class="value">0</span>
+      </label>
     </footer>
 
     <script type="module">
