[jspit] add minimal physarum demo

--- a/jspit/index.html
+++ b/jspit/index.html
@@ -43,6 +43,11 @@
               interactions, and excitement!
             </dd>
 
+            <dt><a href="physarum.html">Physarum</a></dt><dd>
+              Just had to implement a <a
+                href="//www.sagejenson.com/physarum">Physarum</a> sim
+              when I saw it</dd>
+
           </dl>
         </section>
 
