[cdom-template] doors done, that V tho...

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -26,7 +26,7 @@
         <fieldset>
           <legend>TODO:</legend>
           <ul>
-            <li>doors should go places</li>
+            <li>"V" should be usable</li>
             <li>visibility ala <a ref="https://www.albertford.com/shadowcasting">shadow casting</a></li>
             <li>maybe inventory and items</li>
           </ul>
