--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -26,7 +26,7 @@
         <fieldset>
           <legend>TODO:</legend>
           <ul>
-            <li>"V" should be usable</li>
+            <li>less cheese void rune; through the other door</li>
             <li>visibility ala <a ref="https://www.albertford.com/shadowcasting">shadow casting</a></li>
             <li>maybe inventory and items</li>
           </ul>
@@ -111,10 +111,11 @@
 
       dmg.grid.createTile({
         pos: {x: 6, y: -8},
-        className: ['interact'],
+        className: ['interact', 'solid', 'passable'],
         text: 'V',
         style: {color: 'var(--purple)'},
         data: {
+          name: 'void rune',
           morph_subject: {
             classList: {remove: 'solid'},
           },
