--- a/jspit/colorboop.html
+++ b/jspit/colorboop.html
@@ -46,9 +46,8 @@
       <div class="grid"></div>
     </main>
 
-    <footer>
-      <div class="status" style="float: left"></div>
-    </footer>
+    <div class="buttonbar left"></div>
+    <div class="buttonbar right float"></div>
 
     <script type="module">
       import {fillRect} from 'cdom/builder';
@@ -92,6 +91,7 @@
             text: '$',
             style: {color: `var(--${color})`},
             data: {
+              name: `fg:${color}`,
               morph_subject: {
                 style: {color: `var(--${color})`},
               },
@@ -103,6 +103,7 @@
             text: '$',
             style: {backgroundColor: `var(--${color})`},
             data: {
+              name: `bg:${color}`,
               morph_subject: {
                 style: {backgroundColor: `var(--${color})`},
               },
@@ -122,6 +123,8 @@
       const dmg = window.dmg = new DOMgeon({
         ui: document.body,
         grid: document.querySelector('main .grid'),
+        moveBar: document.querySelector('.buttonbar.left'),
+        actionBar: document.querySelector('.buttonbar.right'),
       });
       new DOMgeonInspector(dmg, document.querySelector('#inspector'));
 
