--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -81,6 +81,8 @@
       });
       new DOMgeonInspector(dmg, document.querySelector('#inspector'));
 
+      const floorShader = {className: ['floor', 'support', 'passable'], text: '·'};
+      const wallShader = {className: ['wall'], text: '#'};
       const doorShader = openable({
         text: '+',
         className: ['door', 'interact', 'solid'],
@@ -92,19 +94,21 @@
       });
 
       fillRect(dmg.grid, {x: 0, y: 0, w: 13, h: 8}, roomShader({
+        floors: floorShader,
+        walls: wallShader,
         doors: doorShader,
         doorsAt: (pos, rect) => 
           pos.x === rect.x + Math.floor(rect.w/2),
       }));
 
       fillRect(dmg.grid, {x: 5, y: -5, w: 3, h: 5}, roomShader({
-        walls: borderShader(
-          null,
-          {text: '#', className: ['wall', 'solid']},
-        ),
+        floors: floorShader,
+        walls: borderShader(null, wallShader),
       }));
 
       fillRect(dmg.grid, {x: 4, y: -10, w: 5, h: 5}, roomShader({
+        floors: floorShader,
+        walls: wallShader,
         doors: doorShader,
         doorsAt: (pos, rect) => 
           pos.x === rect.x + Math.floor(rect.w/2) &&
