--- a/jspit/colorboop.html
+++ b/jspit/colorboop.html
@@ -81,13 +81,13 @@
         grid.clear();
 
         const pos = {x: 10, y: 10};
-        grid.createTile({pos, className: ['input', 'mover', 'solid'], text: '@'});
+        grid.createTile({pos, className: ['input', 'mover', 'support'], text: '@'});
         grid.viewPoint = pos;
 
         colors.forEach((color, i) => {
           grid.createTile({
             pos: {x: 5, y: i},
-            className: ['swatch', 'interact', 'solid'],
+            className: ['swatch', 'interact'],
             text: '$',
             style: {color: `var(--${color})`},
             data: {
@@ -99,7 +99,7 @@
           });
           grid.createTile({
             pos: {x: 15, y: i},
-            className: ['swatch', 'interact', 'solid'],
+            className: ['swatch', 'interact'],
             text: '$',
             style: {backgroundColor: `var(--${color})`},
             data: {
@@ -110,13 +110,6 @@
             },
           });
         });
-
-        fillRect(grid, {x: 0, y: -5, w: 20, h: 10 + colors.length}, {
-          className: 'floor',
-          text: '·',
-        });
-
-
       }
 
       import {DOMgeon, DOMgeonInspector} from 'cdom/domgeon';
