[cdom] improve button sizing and access

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -79,8 +79,8 @@
 
     </main>
 
-    <div class="buttonbar left"></div>
-    <div class="buttonbar right float"></div>
+    <div class="buttonbar moves left"></div>
+    <div class="buttonbar actions right float"></div>
 
     <script type="module">
       import {DOMgeon, DOMgeonInspector} from 'cdom/domgeon';
@@ -89,8 +89,8 @@
         ui: document.body,
         keys: document.body,
         grid: document.querySelector('main .grid'),
-        moveBar: document.querySelector('.buttonbar.left'),
-        actionBar: document.querySelector('.buttonbar.right'),
+        moveBar: document.querySelector('.buttonbar.moves'),
+        actionBar: document.querySelector('.buttonbar.actions'),
       });
       new DOMgeonInspector(dmg, document.querySelector('#inspector'));
 
