--- a/jspit/physarum.html
+++ b/jspit/physarum.html
@@ -50,7 +50,7 @@
 
         </dl></fieldset>
 
-        <section class="buttonbar">
+        <section>
           <span style="float: right">Press <code>&lt;Escape&gt;</code> to run simulation</span>
 
           <label for="singleStep"><input id="singleStep" type="checkbox" /> SingleStep</label>
