[jspit/dla] explicate z-index

--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -173,6 +173,12 @@
           <textarea readonly style="border: none; resize: none; user-select: all; width: 100%;"></textarea>
         </fieldset>
       </div>
+      <style>
+        .tile               { z-index: 1 }
+        .tile.particle      { z-index: 10 }
+        .tile.particle.live { z-index: 100 }
+        .tile.input         { z-index: 1000 }
+      </style>
 
     </main>
 
