[cdom-template] style self-supported mover

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -73,6 +73,11 @@
         .tile.door.passable::before { content: "-" }
 
         .tile.rune { color: var(--purple) }
+
+        .tile.mover.support {
+          text-decoration: underline;
+          text-decoration-style: dotted;
+        }
       </style>
       <div class="grid">
       </div>
